; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/ide/extr_sl82c105.c_sl82c105_set_dma_mode.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/ide/extr_sl82c105.c_sl82c105_set_dma_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@sl82c105_set_dma_mode.mwdma_timings = internal global [3 x i32] [i32 1799, i32 513, i32 512], align 4
@.str = private unnamed_addr constant [43 x i8] c"sl82c105_tune_chipset(drive:%s, speed:%s)\0A\00", align 1
@XFER_MW_DMA_0 = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_5__*, i64)* @sl82c105_set_dma_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sl82c105_set_dma_mode(%struct.TYPE_5__* %0, i64 %1) #0 {
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %8 = call i64 @ide_get_drivedata(%struct.TYPE_5__* %7)
  store i64 %8, i64* %5, align 8
  %9 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %10 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i64, i64* %4, align 8
  %13 = call i32 @ide_xfer_verbose(i64 %12)
  %14 = sext i32 %13 to i64
  %15 = inttoptr i64 %14 to i8*
  %16 = call i32 @DBG(i8* %15)
  %17 = load i64, i64* %4, align 8
  %18 = load i64, i64* @XFER_MW_DMA_0, align 8
  %19 = sub i64 %17, %18
  %20 = getelementptr inbounds [3 x i32], [3 x i32]* @sl82c105_set_dma_mode.mwdma_timings, i64 0, i64 %19
  %21 = load i32, i32* %20, align 4
  store i32 %21, i32* %6, align 4
  %22 = load i64, i64* %5, align 8
  %23 = and i64 %22, 65535
  store i64 %23, i64* %5, align 8
  %24 = load i32, i32* %6, align 4
  %25 = sext i32 %24 to i64
  %26 = shl i64 %25, 16
  %27 = load i64, i64* %5, align 8
  %28 = or i64 %27, %26
  store i64 %28, i64* %5, align 8
  %29 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %30 = load i64, i64* %5, align 8
  %31 = inttoptr i64 %30 to i8*
  %32 = call i32 @ide_set_drivedata(%struct.TYPE_5__* %29, i8* %31)
  ret void
}

declare dso_local i64 @ide_get_drivedata(%struct.TYPE_5__*) #1

declare dso_local i32 @DBG(i8*) #1

declare dso_local i32 @ide_xfer_verbose(i64) #1

declare dso_local i32 @ide_set_drivedata(%struct.TYPE_5__*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
